still working on mobile issue

--- a/MT.css
+++ b/MT.css
@@ -179,7 +179,7 @@ li{
 }
 
 /* Some media queries for responsiveness */
-@media screen and (max-height: 600px) {
+@media screen and (max-height: 800px){
   .sidenav a , .dropdown-btn{font-size: 15px;}
   h2.new{font-size: 40px;}
   h2.new2{font-size: 15px;}
